--- a/view/frontend/templates/component/static_block.phtml
+++ b/view/frontend/templates/component/static_block.phtml
@@ -4,12 +4,14 @@ $componentConfiguration = $block->getData();
 
 /** @var \MageSuite\ContentConstructorFrontend\Model\Component\StaticBlock $viewModel */
 $viewModel = $block->getViewModel();
+$visibility = $block->getVisibilityClass();
 $resetStyles = $viewModel->getData('resetstyles');
 ?>
-<div class="cs-container cs-container--static-block">
-    <div class="cs-container__inner">
-        <div class="<?=$block->getVisibilityClass()?>">
-            <div class="<?php if (!$resetStyles): ?>cs-static-cms-block<?php endif; ?> cs-cms-block <?php if ($resetStyles): ?>cs-static-cms-block-resetstyles<?php endif; ?>">
+
+<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
+    <div class="cs-container cs-container--static-block">
+        <div class="cs-container__inner">
+            <div class="<?php if (!$resetStyles): ?>cs-static-cms-block<?php endif; ?> cs-cms-block <?php if ($resetStyles): ?>cs-static-cms-block-resetstyles<?php endif; ?> <?=$block->getVar('static_block/mix');?>">
                 <?=$viewModel->getContent()?>
             </div>
         </div>
