--- a/view/frontend/templates/component/brand_carousel.phtml
+++ b/view/frontend/templates/component/brand_carousel.phtml
@@ -6,43 +6,49 @@ $componentConfiguration = $block->getData();
 $viewModel = $block->getViewModel();
 
 $brands = $viewModel->getBrands();
+$isLazyLoaded = $block->getVar('brand_carousel/lazyload_brand_images');
+$navIconPrevPath = $block->getVar('brand_carousel/navigation/arrows/prev/path');
+$navIconNextPath = $block->getVar('brand_carousel/navigation/arrows/next/path');
 ?>
-<div class="cs-container cs-container--brand-carousel">
-    <div class="cs-container__inner">
-        <div class="<?=$block->getVisibilityClass()?>">
-            <div class="cs-brand-carousel">
+
+<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
+    <div class="cs-container cs-container--brand-carousel">
+        <div class="cs-container__inner">
+            <div class="cs-brand-carousel cs-brand-carousel--slider <?= $block->getVar('brand_carousel/mix'); ?>">
                 <div class="cs-brand-carousel__carousel">
                     <div class="cs-brand-carousel__wrapper">
                         <ul class="cs-brand-carousel__slides">
-
                             <?php foreach($brands as $brand): ?>
                             <li class="cs-brand-carousel__slide">
-                                <?php if($brand['href']): ?>
+                                <?php if($brand['href'] && $block->getVar('brand_carousel/link_brands') ): ?>
                                 <a href="<?=$brand['href']?>" class="cs-brand-carousel__slide-link">
                                 <?php endif; ?>
-
                                     <?php if($brand['image']['src']): ?>
                                     <figure class="cs-brand-carousel__figure">
                                         <img
-                                                class="cs-brand-carousel__image lazyload"
+                                            class="cs-brand-carousel__image <?php if($isLazyLoaded){ echo 'lazyload';} ?>"
+                                            <?php if($isLazyLoaded): ?>
                                                 src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
                                                 data-src="<?=$brand['image']['src']?>"
-                                                alt="<?=$brand['image']['alt']?>"
-                                                <?php if(isset($brand['image']['width'])): ?>width="<?=$brand['image']['width']?>" <?php endif; ?>
-                                                <?php if(isset($brand['image']['height'])): ?>height="<?=$brand['image']['height']?>" <?php endif; ?>
+                                            <?php else: ?>
+                                                src="<?=$brand['image']['src']?>"
+                                            <?php endif; ?>
+                                            alt="<?=$brand['image']['alt']?>"
+                                            <?php if(isset($brand['image']['width'])): ?>width="<?=$brand['image']['width']?>" <?php endif; ?>
+                                            <?php if(isset($brand['image']['height'])): ?>height="<?=$brand['image']['height']?>" <?php endif; ?>
                                         >
                                         <noscript>
                                             <img
-                                                    class="cs-brand-carousel__image"
-                                                    src="<?=$brand['image']['src']?>"
-                                                    alt="<?=$brand['image']['alt']?>"
-                                                    <?php if(isset($brand['image']['width'])): ?>width="<?=$brand['image']['width']?>" <?php endif; ?>
-                                                    <?php if(isset($brand['image']['height'])): ?>height="<?=$brand['image']['height']?>" <?php endif; ?>
+                                                class="cs-brand-carousel__image"
+                                                src="<?=$brand['image']['src']?>"
+                                                alt="<?=$brand['image']['alt']?>"
+                                                <?php if(isset($brand['image']['width'])): ?>width="<?=$brand['image']['width']?>" <?php endif; ?>
+                                                <?php if(isset($brand['image']['height'])): ?>height="<?=$brand['image']['height']?>" <?php endif; ?>
                                             >
                                         </noscript>
                                     </figure>
                                     <?php endif; ?>
-                                <?php if($brand['href']): ?>
+                                <?php if($brand['href'] && $block->getVar('brand_carousel/link_brands')): ?>
                                 </a>
                                 <?php endif; ?>
                             </li>
@@ -51,20 +57,33 @@ $brands = $viewModel->getBrands();
                     </div>
                 </div>
 
-                <button class="cs-brand-carousel__nav cs-brand-carousel__nav--prev"
+                <?php if($block->getVar('brand_carousel/navigation/show')): ?>
+                    <button
+                        class="cs-brand-carousel__nav cs-brand-carousel__nav--prev <?= $block->getVar('brand_carousel/navigation/arrows/prev/mix') ?>"
+                        type="button"
+                    >
+                        <svg class="cs-brand-carousel__nav-icon">
+                            <use
+                                xlink:href="<?= $navIconPrevPath ?>"
+                                href="<?= $navIconPrevPath ?>">
+                            </use>
+                        </svg>
+                    </button>
+                    <button
+                        class="cs-brand-carousel__nav cs-brand-carousel__nav--next <?= $block->getVar('brand_carousel/navigation/arrows/next/mix') ?>"
                         type="button">
-                    <svg class="cs-brand-carousel__nav-icon">
-                        <use xlink:href="#icon_arrow-left"></use>
-                    </svg>
-                </button>
-                <button class="cs-brand-carousel__nav cs-brand-carousel__nav--next"
-                        type="button">
-                    <svg class="cs-brand-carousel__nav-icon">
-                        <use xlink:href="#icon_arrow-right"></use>
-                    </svg>
-                </button>
+                        <svg class="cs-brand-carousel__nav-icon">
+                            <use
+                                xlink:href="<?= $navIconNextPath ?>"
+                                href="<?= $navIconNextPath ?>">
+                            </use>
+                        </svg>
+                    </button>
+                <?php endif; ?>
 
-                <ul class="cs-brand-carousel__pagination "></ul>
+                <?php if($block->getVar('brand_carousel/pagination/show')): ?>
+                    <ul class="cs-brand-carousel__pagination <?= $block->getVar('brand_carousel/pagination/mix') ?>"></ul>
+                <?php endif; ?>
             </div>
         </div>
     </div>
