--- a/view/frontend/templates/component/headline.phtml
+++ b/view/frontend/templates/component/headline.phtml
@@ -2,15 +2,19 @@
 /** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\Headline */
 /** @var $viewModel \MageSuite\ContentConstructorFrontend\Model\Component\Headline */
 $viewModel = $block->getViewModel();
+$visibility = $block->getVisibilityClass();
 
 $tag = $viewModel->getHeadingTag();
 ?>
-<div class="cs-container cs-container--headline">
-    <div class="cs-container__inner">
-        <div class="<?=$block->getVisibilityClass()?>">
-            <div class="cs-headline">
+
+<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
+    <div class="cs-container cs-container--headline">
+        <div class="cs-container__inner">
+            <div class="cs-headline <?= $block->getVar('headline/mix'); ?>">
                 <<?=$tag?> class="cs-headline__title"><?= $viewModel->getTitle() ?></<?=$tag?>>
-                <p class="cs-headline__subtitle"><?= $viewModel->getSubtitle() ?></p>
+                <?php if ($viewModel->getSubtitle()): ?>
+                    <p class="cs-headline__subtitle"><?= $viewModel->getSubtitle() ?></p>
+                <?php endif; ?>
             </div>
         </div>
     </div>
