--- a/view/frontend/templates/component/image_teaser.phtml
+++ b/view/frontend/templates/component/image_teaser.phtml
@@ -1,6 +1,10 @@
 <?php
 /** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\ImageTeaser */
 $viewModel = $block->getViewModel();
+$visibility = $block->getVisibilityClass();
+$maxContentWidth = $block->getVar('max_content_width');
+$navIconPrevPath = $block->getVar('image_teaser/navigation/arrows/prev/path');
+$navIconNextPath = $block->getVar('image_teaser/navigation/arrows/next/path');
 
 $imageTeaser = $block->getData();
 $itemsPerRow = $imageTeaser['currentScenario']['desktopLayout']['id'];
@@ -56,17 +60,17 @@ if ($imageTeaser['currentScenario']['teaserWidth']['id'] == 'w-s') {
     $sizesMobile = '(max-width: 48em) 80vw';
     $sizesDesktop = (80 / $itemsPerView) . 'vw';
 } else if ($imageTeaser['currentScenario']['teaserWidth']['id'] == 'c') {
-    $sizesDesktop = '(min-width: 1200px) ' . (1200 / $itemsPerView) . 'px, ' . $sizesDesktop;
+    $sizesDesktop = '(min-width: ' . $maxContentWidth . 'px) ' . ($maxContentWidth / $itemsPerView) . 'px, ' . $sizesDesktop;
 }
 
 $sizes = $sizesMobile . ', ' . $sizesDesktop;
 ?>
 
-<div class="cs-container cs-container--image-teaser">
-    <?php if ($imageTeaser['currentScenario']['teaserWidth']['id'] == 'c' or $imageTeaser['currentScenario']['teaserWidth']['id'] == 'c-s'): ?>
-    <div class="cs-container__inner">
+<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
+    <div class="cs-container cs-container--image-teaser">
+        <?php if ($imageTeaser['currentScenario']['teaserWidth']['id'] == 'c' or $imageTeaser['currentScenario']['teaserWidth']['id'] == 'c-s'): ?>
+        <div class="cs-container__inner">
         <?php endif; ?>
-        <div class="<?=$block->getVisibilityClass()?>">
             <div class="cs-image-teaser
              cs-image-teaser--items-in-row-<?= $itemsPerRow ?>
              cs-image-teaser--items-in-row-mobile-<?= $itemsPerViewMobile ?>
@@ -157,25 +161,31 @@ $sizes = $sizesMobile . ', ' . $sizesDesktop;
                         </ul>
                     </div>
 
-                    <?php if ($isSlider or $isSliderMobile): ?>
+                    <?php if (($isSlider or $isSliderMobile) && $block->getVar('image_teaser/navigation/show')): ?>
                         <button class="cs-image-teaser__nav cs-image-teaser__nav--prev"
                                 type="button">
                             <svg class="cs-image-teaser__nav-icon">
-                                <use xlink:href="#icon_arrow-left"></use>
+                                <use
+                                    xlink:href="<?= $navIconPrevPath ?>"
+                                    href="<?= $navIconPrevPath ?>">
+                                </use>
                             </svg>
                         </button>
                         <button class="cs-image-teaser__nav cs-image-teaser__nav--next"
                                 type="button">
                             <svg class="cs-image-teaser__nav-icon">
-                                <use xlink:href="#icon_arrow-right"></use>
+                                <use
+                                    xlink:href="<?= $navIconNextPath ?>"
+                                    href="<?= $navIconNextPath ?>">
+                                </use>
                             </svg>
                         </button>
                     <?php endif; ?>
 
                 </div>
 
-                <?php if ($isSliderMobile): ?>
-                    <ul class="cs-image-teaser__pagination"></ul>
+                <?php if (($isSlider or $isSliderMobile) && $block->getVar('image_teaser/pagination/show')): ?>
+                    <ul class="cs-image-teaser__pagination <?= $block->getVar('image_teaser/pagination/mix') ?>"></ul>
                 <?php endif; ?>
                 <?php if ($imageTeaser['currentScenario']['teaserWidth']['id'] == 'c' or $imageTeaser['currentScenario']['teaserWidth']['id'] == 'c-s'): ?>
             </div>
