--- a/view/frontend/templates/component/product_carousel.phtml
+++ b/view/frontend/templates/component/product_carousel.phtml
@@ -4,10 +4,14 @@ $componentConfiguration = $block->getData();
 
 /** @var \MageSuite\ContentConstructorFrontend\Model\Component\ProductCarousel $viewModel */
 $viewModel = $block->getViewModel();
+$visibility = $block->getVisibilityClass();
+$navIconPrevPath = $block->getVar('product_carousel/navigation/arrows/prev/path');
+$navIconNextPath = $block->getVar('product_carousel/navigation/arrows/next/path');
 ?>
-<div class="cs-container cs-container--products-carousel">
-    <div class="cs-container__inner">
-        <div class="<?=$block->getVisibilityClass()?>">
+
+<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
+    <div class="cs-container cs-container--products-carousel">
+        <div class="cs-container__inner">
             <div class="cs-products-carousel">
                 <div class="cs-products-carousel__carousel">
                     <div class="cs-products-carousel__wrapper">
@@ -24,21 +28,27 @@ $viewModel = $block->getViewModel();
                         </ul>
                     </div>
 
-                    <?php if ($block->getVar('product_carousel/show_navigation')): ?>
-                        <button class="cs-products-carousel__nav cs-products-carousel__nav--prev" type="button">
+                    <?php if ($block->getVar('product_carousel/navigation/show')): ?>
+                        <button class="cs-products-carousel__nav cs-products-carousel__nav--prev <?= $block->getVar('brand_carousel/navigation/arrows/prev/mix') ?>" type="button">
                             <svg class="cs-products-carousel__nav-icon">
-                                <use xlink:href="<?= $block->getVar('product_carousel/icon/left') ?>"></use>
+                                <use
+                                    xlink:href="<?= $navIconPrevPath ?>"
+                                    href="<?= $navIconPrevPath ?>">
+                                </use>
                             </svg>
                         </button>
-                        <button class="cs-products-carousel__nav cs-products-carousel__nav--next" type="button">
+                        <button class="cs-products-carousel__nav cs-products-carousel__nav--next <?= $block->getVar('brand_carousel/navigation/arrows/next/mix') ?>" type="button">
                             <svg class="cs-products-carousel__nav-icon">
-                                <use xlink:href="<?= $block->getVar('product_carousel/icon/right') ?>"></use>
+                                <use
+                                    xlink:href="<?= $navIconNextPath ?>"
+                                    href="<?= $navIconNextPath ?>">
+                                </use>
                             </svg>
                         </button>
                     <?php endif; ?>
 
                     <?php if ($block->getVar('product_carousel/show_pagination')): ?>
-                        <ul class="cs-products-carousel__pagination"></ul>
+                        <ul class="cs-products-carousel__pagination <?= $block->getVar('product_carousel/pagination/mix') ?>"></ul>
                     <?php endif; ?>
                 </div>
             </div>
