--- a/view/frontend/templates/component/product_grid.phtml
+++ b/view/frontend/templates/component/product_grid.phtml
@@ -1,19 +1,24 @@
 <?php
 /** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\ProductGrid */
 $viewModel = $block->getViewModel();
+$visibility = $block->getVisibilityClass();
 
 $hero = $viewModel->getHero();
 $heroImage = $hero->getImage();
 
 $linkTag = !empty($hero->getHref()) ? 'a' : 'div';
+
+$isLazyLoaded = $block->getVar('product_grid_carousel/lazyload_heros_images');
 ?>
-<div class="cs-container cs-container--products-grid">
-    <div class="cs-container__inner">
-        <div class="<?=$block->getVisibilityClass()?>">
+
+<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
+    <div class="cs-container cs-container--products-grid">
+        <div class="cs-container__inner">
             <div class="cs-products-grid <?= $viewModel->hasHero() ? 'cs-products-grid--with-hero' : '' ?>"
                  data-rows-mobile="<?= $viewModel->getRowsMobile() ?>"
                  data-rows-tablet="<?= $viewModel->getRowsTablet() ?>"
                  data-rows-desktop="<?= $viewModel->getRowsDesktop() ?>"
+                 <?= $block->getVar('product_grid/mix'); ?>
             >
                 <?php
                 $columnsConfiguration = $block->getVar('product_grid/columns_configuration');
@@ -25,18 +30,21 @@ $linkTag = !empty($hero->getHref()) ? 'a' : 'div';
                      data-teasers-configuration='[<?= json_encode($teasersConfiguration) ?>]'>
                     <ul class="cs-grid-layout__grid">
                         <?php if ($viewModel->hasHero()): ?>
-                        <li class="cs-grid-layout__brick cs-grid-layout__brick--x2 cs-grid-layout__brick--teaser | cs-products-grid__hero cs-products-grid__hero--scheme-<?= $hero['colorScheme'] ?>"
+                        <li class="cs-grid-layout__brick cs-grid-layout__brick--x<?= $block->getVar('product_grid/teasers_configuration/size/x'); ?> cs-grid-layout__brick--y<?= $block->getVar('product_grid/teasers_configuration/size/y'); ?> cs-grid-layout__brick--teaser | cs-products-grid__hero cs-products-grid__hero--scheme-<?= $hero['colorScheme'] ?>"
                             data-teaser-id="1">
                             <<?= $linkTag ?> <?php if ($hero->getHref()): ?> href="<?= $hero->getHref() ?>" <?php endif; ?>
                             class="cs-products-grid__hero-link">
 
-
                             <?php if ($heroImage->getSrc()): ?>
                                 <figure class="cs-products-grid__hero-figure">
                                     <img
-                                        class="cs-products-grid__hero-image | lazyload"
-                                        src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-                                        data-src="<?= $heroImage->getSrc() ?>"
+                                        class="cs-products-grid__hero-image | <?php if($isLazyLoaded){ echo 'lazyload';} ?>"
+                                        <?php if($isLazyLoaded): ?>
+                                            src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+                                            data-src="<?= $heroImage->getSrc() ?>"
+                                        <?php else: ?>
+                                            src="<?= $heroImage->getSrc() ?>"
+                                        <?php endif; ?>
                                         <?php if ($heroImage->getSrcSet()): ?>data-srcset="<?= $heroImage->getSrcSet() ?>"<?php endif; ?>
                                         alt="<?= $heroImage->getAlt() ?>"
                                     >
@@ -69,9 +77,13 @@ $linkTag = !empty($hero->getHref()) ? 'a' : 'div';
                                         <div class="cs-products-grid__hero-cta">
                                             <span role="button"
                                                   class="cs-button cs-button--type_long cs-button--look_default | cs-products-grid__button">
-                                                <span class="cs-button__span"><?= $hero->getButtonLabel() ?></span>
-                                                <svg class="cs-button__icon | cs-products-grid__button-icon"><use
-                                                            xlink:href="#arrow_next"></use></svg>
+                                                  <span class="cs-button__span"><?= $hero->getButtonLabel() ?></span>
+
+                                                  <?php if($block->getVar('product_grid/cta_button_icon/show')): ?>
+                                                      <svg class="cs-button__icon">
+                                                          <use xlink:href="<?php echo $block->getVar('product_grid/cta_button_icon/path'); ?>"></use>
+                                                      </svg>
+                                                  <?php endif; ?>
                                             </span>
                                         </div>
                                     <?php endif; ?>
