--- a/view/frontend/templates/component/separator.phtml
+++ b/view/frontend/templates/component/separator.phtml
@@ -1,8 +1,12 @@
-<?php /** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\Separator */ ?>
-<div class="cs-container cs-container--separator">
-    <div class="cs-container__inner">
-        <div class="<?=$block->getVisibilityClass()?>">
-            <hr class="cs-separator">
+<?php
+/** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\Separator */
+$visibility = $block->getVisibilityClass();
+?>
+
+<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
+    <div class="cs-container cs-container--separator">
+        <div class="cs-container__inner">
+            <hr class="cs-separator <?=$block->getVar('separator/mix');?>">
         </div>
     </div>
 </div>
